--- a/registrasationform/src/App.css
+++ b/registrasationform/src/App.css
@@ -42,7 +42,7 @@
 }
 
 .nav_div {
-    height: 10rem;
+    height: 30px;
     display: flex;
     justify-content: space-around;
     align-items: center;
